--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "P-Stream",
-  "short_name": "P-Stream",
+  "name": "Corridor",
+  "short_name": "Corridor",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#120f1d",
